...
        let messagePrefix = correctAnswers == questionsAmount ?
        "Поздравляем, вы ответили на 10 из 10!" :
        "Ваш результат: \(correctAnswers)/10"
        
        let finalMessage = "\(messagePrefix)\n\(statisticsText)"
        
        let model = AlertModel(title: "Этот раунд окончен!", message: finalMessage, buttonText: "Сыграть ещё раз") {
            viewController.resetQuiz()
        }
        
        viewController.alertPresenter.showAlert(model: model)
    }
    
...
